--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -14,6 +14,11 @@ html, body {
   @apply my-0 !important;
 }
 
+.low-profile-header {
+  @apply my-0 !important;  
+  color: inherit !important;
+}
+
 .low-profile-link {
   @apply no-underline !important;
   color: inherit !important;
