--- a/layouts/partials/lib/overview/changelog.html
+++ b/layouts/partials/lib/overview/changelog.html
@@ -2,6 +2,7 @@
 <div class="mb-10">
   <div class="pl-4">
 
+    <h4>Changelog</h4>
     {{ with .added }}
       <span class="">Added:</span>
       <ul>
