--- a/layouts/partials/lib/function/var-table.html
+++ b/layouts/partials/lib/function/var-table.html
@@ -24,12 +24,12 @@
                 {{ $data := dict }}
                 {{ $data = partial "lib/read-var-data.html" (dict "ctx" $.ctx "var" . "name" .name ) }}
 
-                <tr class="font-mono">
-                  <td>{{ $kind | upper }}</td>{{/* todo: only icons in this column */}}
+                <tr class="">
+                  <td>{{ $kind }}</td>{{/* todo: only icons in this column */}}
                   <td>{{ with $data.name }}<a class="" href="#{{ $data.id | urlize }}">{{ . }}</a>{{ end }}</td>
                   <td>{{ with $data.type }} {{ . }}{{ end }}</td>
                   <td>{{ with $data.default_value}}{{ . }}{{ end }}</td>
-                  <td class="font-sans">{{ with $data.comment}} {{ . }} {{ end }}</td>
+                  <td class="">{{ with $data.comment}} {{ . }} {{ end }}</td>
                 </tr>
               {{ end }}
             {{ end }}
