--- a/layouts/partials/body/breadcrumb.html
+++ b/layouts/partials/body/breadcrumb.html
@@ -1,4 +1,4 @@
-<nav class="flex items-center flex-row flex-wrap mb-4 text-sm text-default-light print:hidden">
+<nav class="flex items-center flex-row flex-wrap min-h-8 mb-8 text-sm text-default-light print:hidden">
   {{ template "breadcrumbnav" (dict "p1" . "p2" .) }}
 
   {{ define "breadcrumbnav" }}
