--- a/layouts/partials/lib/changes.html
+++ b/layouts/partials/lib/changes.html
@@ -1,8 +1,6 @@
-
-<div class="mb-10">
-  <div class="pl-4">
-
-    <h4>Changelog</h4>
+<div class="mb-10 pb-2">
+  <h4>Changes</h4>
+  <div class="px-2 py-1 border rounded-lg">
     {{ with .added }}
       <span class="">Added:</span>
       <ul>
