--- a/layouts/partials/lib/infos.html
+++ b/layouts/partials/lib/infos.html
@@ -1,43 +1,8 @@
 <div class="flex items-center flex-wrap mr-2 text-xs">
-
-  {{ with .changelog }}
-    {{ range first 1 . }}
-
-      {{ with .version }}
-        <a class="tracking-wider text-base py-0.5 flex items-center mr-2 button-a" data-toggle="collapse" title="version / toggle changelog" href="#changelog-accordion">
-          {{ . }}
-        </a>&nbsp
-      {{ end }}
-
-      {{ with .date }}
-        <time class="py-0.5 flex items-center mr-2" title="last edit">
-          {{ partial "svgs/heroicons/pencil.svg" (dict "class" "h-4 mr-1" ) }}
-
-          {{ if or (eq ( . | lower) "unreleased" (eq ( . | lower) "draft"))  }}
-            <span class="text-primary">
-              unreleased
-            </span>
-          {{ else }}
-            {{ dateFormat "02 Jan 2006" . }}
-          {{ end }}
-        </time>&nbsp
-      {{ end }}
-
-      {{ with .author }}
-        <span class="py-0.5 flex items-center mr-2" title="author of last edit">
-          {{ partial "svgs/heroicons/user.svg" (dict "class" "h-4 mr-1" ) }}
-          {{ . }}
-        </span>&nbsp
-      {{ end }}
-
-    {{ end }}
-  {{ end }}
-
   {{ with .since }}
-    <span class="py-0.5 flex items-center mr-2" title="lib version of introduction">
+    <span class="py-0.5 flex items-center" title="lib version of introduction">
       {{ partial "svgs/heroicons/information-circle.svg" (dict "class" "h-4 mr-1" ) }}
       {{ printf "since lib: v%v" . }}
     </span>&nbsp
   {{ end }}
-
 </div>
