--- a/layouts/partials/lib/overview/assets.html
+++ b/layouts/partials/lib/overview/assets.html
@@ -1,11 +1,11 @@
 
-<div class="mb-10 ml-4 pb-2">
+<div class="mb-10 pb-2">
   <h4>Assets</h4>
   <div class="border rounded-lg">
     {{ $index := 1 }}
 
     {{ range $key, $value := (sort . "date" "asc") }}
-      <div class="flex justify-between items-center pl-2 pr-2 py-1 {{if ne $index 1 }}border-t{{ end }}">
+      <div class="flex justify-between items-center px-2 py-1 {{if ne $index 1 }}border-t{{ end }}">
 
         {{ with $value.url}}
           <a class="low-profile-link" title="download" target="_blank" href={{.}}>
