list view for lib items

--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,1 +1,5 @@
-{{ partial "summary/classic" . }}
+{{ if in .Layout "lib-" }}
+  {{ partial "summary/lib-item" . }}  
+{{ else }}
+  {{ partial "summary/classic" . }}
+{{ end }}
