--- a/layouts/partials/summary/classic.html
+++ b/layouts/partials/summary/classic.html
@@ -11,7 +11,7 @@
   </header>
 
   <div>
-    <div class="">
+    <div class="text-default-light italic">
       {{ with .Params.description }}
         {{ . }}
       {{ else }}
