--- a/layouts/partials/lib/version-history.html
+++ b/layouts/partials/lib/version-history.html
@@ -1,15 +1,34 @@
-{{ range . }}
+
+{{ range first 1 . }}
   <div class="mb-10">
     {{ with .version }}
-      <h3 id="{{ . | urlize }}">{{ . }}</h3>
+    <h3 id="{{ . | urlize }}">{{ . }}</h3>
     {{ end }}
-
-
     <div class="">
       {{ partial "lib/version-info.html" . }}
-
       {{ partial "lib/changes.html" . }}
-
     </div>
   </div>
+{{ end }}
+
+{{/* older versions collapsed */}}
+{{ if gt (len .) 1 }}
+  <details class="cursor-pointer">
+    <summary class="print:hidden -mt-10">show all</summary>
+{{end}}
+
+{{ range after 1 . }}
+  <div class="mb-10">
+    {{ with .version }}
+    <h3 id="{{ . | urlize }}">{{ . }}</h3>
+    {{ end }}
+    <div class="">
+      {{ partial "lib/version-info.html" . }}
+      {{ partial "lib/changes.html" . }}
+    </div>
+  </div>
+{{ end }}
+
+{{ if gt (len .) 1 }}
+  </details>
 {{ end }}
