always hide <summary> on print

--- a/layouts/partials/lib/version-history.html
+++ b/layouts/partials/lib/version-history.html
@@ -14,7 +14,7 @@
 {{/* older versions collapsed */}}
 {{ if gt (len .) 1 }}
   <details class="cursor-pointer">
-    <summary class="print:hidden -mt-10">show all</summary>
+    <summary class="-mt-10">show all</summary>
 {{end}}
 
 {{ range after 1 . }}
