--- a/layouts/partials/lib/version-history.html
+++ b/layouts/partials/lib/version-history.html
@@ -13,8 +13,8 @@
 
 {{/* older versions collapsed */}}
 {{ if gt (len .) 1 }}
-  <details class="cursor-pointer">
-    <summary class="-mt-10">show all</summary>
+  <details>
+    <summary class="-mt-10 cursor-pointer">show full history</summary>
 {{end}}
 
 {{ range after 1 . }}
