--- a/layouts/partials/summary/lib-item.html
+++ b/layouts/partials/summary/lib-item.html
@@ -16,7 +16,7 @@
 <div class="w-full border-t pt-4 mb-4">
   <div class="">
     {{ if $new }}
-      <span class="text-primary font-semibold italic" title="this item is new">new: </span>
+      <span class="text-brand font-semibold italic" title="this item is new">new: </span>
     {{ end }}
     <span class="text-xl">
       <a href='{{ .Permalink }}' class="low-profile-link">
