--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -22,14 +22,14 @@ html, body {
 .low-profile-link {
   @apply no-underline !important;
   color: inherit !important;
-  @apply hover:text-primary !important;
+  @apply hover:text-brand !important;
 }
 
 .button-a {
   @apply no-underline !important;
   @apply text-default hover:text-default-dark !important;
   @apply px-1 py-0.5 print:p-0;
-  @apply rounded bg-default-soft shadow-sm print:bg-none print:shadow-none;
+  @apply rounded bg-default-soft shadow-sm print:bg-background print:shadow-none;
 }
 
 
