--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,7 +8,7 @@
       <title>{{ block "title" . }}{{ .Title }}{{ end }}</title>
       {{ partial "head/styles" . }}
       {{ partial "head/scripts" . }}    
-      {{ partial "head/theme" . }}
+      {{ partial "head/theming" . }}
       {{ partial "head/meta" . }}
   </head>
 
