--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -22,7 +22,7 @@
                   <span class="pl-1 pr-1 py-0.5">
                     {{ $element.Page.Title }}
                   </span>
-                  <span class="pr-1 pl-1 py-0.5 rounded-r bg-primary text-primary-inverse">
+                  <span class="pr-1 pl-1 py-0.5 rounded-r bg-brand text-brand-inverse">
                     {{ printf "%#v" (len $element) }}
                   </span>
                 </a>
