--- a/layouts/partials/lib/type/var-details.html
+++ b/layouts/partials/lib/type/var-details.html
@@ -9,7 +9,7 @@
 
     <div class="pl-4 bg-default-soft">
       <h3 class="inline-block flat" id="{{ $data.id | urlize }}">{{ $data.name }}</h3>
-      {{ with $data.type }}<span class="ml-2 text-primary font-mono">{{ .}} </span>{{ end }}
+      {{ with $data.type }}<span class="ml-2 text-brand font-mono">{{ .}} </span>{{ end }}
       {{/* todo: create hyperlinks for non-basic types*/}}
       {{/* "optional" and "default value" between the same pair of brackets  */}}
       <div class="inline-block ml-2 text-default-light italic">
