--- a/layouts/shortcodes/lib-components.html
+++ b/layouts/shortcodes/lib-components.html
@@ -33,26 +33,26 @@
 
   {{ if ne $kind "item" }}
     {{/* list selected type */}}
-    {{ $table = printf "%s| %s  | version | description |\n" $table $kind }}
-    {{ $table = printf "%s| --- | ------- | ----------- |\n" $table }}
+    {{ $table = printf "%s| | |\n" $table }}
+    {{ $table = printf "%s| --- | ----------- |\n" $table }}
     {{ range where .Pages "Layout" $filter }}
       {{ $item := partial "lib/lib-item-summary" ( dict "ctx" . ) }}
       {{ if eq $item.kind $type }}
+        {{ $table = printf "%s | %s | *%s* |\n" $table $item.markdownLink $item.comment }}
         {{ $itemsFound = true }}
-        {{ $table = printf "%s | %s | %v | %s |\n" $table $item.markdownLink $item.version $item.comment }}
       {{ end }}
     {{ end }}
   {{ else }}
 
     {{/* list all */}}
-    {{ $table = printf "%s| item | kind | version | description |\n" $table }}
-    {{ $table = printf "%s| ---- | ---- | ------- | ----------- |\n" $table }}
+    {{ $table = printf "%s|  |  |  |\n" $table }}
+    {{ $table = printf "%s| ---- | ---- | ----------- |\n" $table }}
 
     {{/* data types */}}
     {{ range where .Pages "Layout" "lib-type" }}
       {{ $itemsFound = true }}
       {{ $item := partial "lib/lib-item-summary" ( dict "ctx" . ) }}
-      {{ $table = printf "%s| %s | %s | %v | %s |\n" $table $item.markdownLink $item.kind $item.version $item.comment }}
+      {{ $table = printf "%s| %s | %s | *%s* |\n" $table $item.kind $item.markdownLink $item.comment }}
     {{ end }}
 
     {{/* function blocks */}}
@@ -60,7 +60,7 @@
       {{ $item := partial "lib/lib-item-summary" ( dict "ctx" . ) }}
       {{ if eq $item.kind "function block" }}
         {{ $itemsFound = true }}
-        {{ $table = printf "%s| %s | %s | %v | %s |\n" $table $item.markdownLink $item.kind $item.version $item.comment }}
+        {{ $table = printf "%s| %s | %s | *%s* |\n" $table $item.kind $item.markdownLink $item.comment }}
       {{ end }}
     {{ end }}
 
@@ -69,7 +69,7 @@
       {{ $item := partial "lib/lib-item-summary" ( dict "ctx" . ) }}
       {{ if eq $item.kind "function" }}
         {{ $itemsFound = true }}
-        {{ $table = printf "%s| %s | %s | %v | %s |\n" $table $item.markdownLink $item.kind $item.version $item.comment }}
+        {{ $table = printf "%s| %s | %s | *%s* |\n" $table $item.kind $item.markdownLink $item.comment }}
       {{ end }}
     {{ end }}
   {{ end }}
