--- a/layouts/partials/lib/function/snippet.html
+++ b/layouts/partials/lib/function/snippet.html
@@ -7,32 +7,28 @@
     {{ $vars := slice }}
 
     {{ with .var }}
-      <h3 id="snippet">Snippet</h3>
+      {{ printf "*Snippet of the function call:*" | markdownify }}      
         <div class="overflow-x-auto">
           {{ $code_block := "```iecst\n" }}
 
           {{ if $isFB }}
             {{/* Declaration */}}
             {{ $varName := printf "FB_%s" $name }}
-            {{ $code_block = printf "%s// declaration\n" $code_block  }}
             {{ $code_block = printf "%s%s : ARRAY[0..0] OF %s;\n\n" $code_block $varName $name }}
 
               {{/* parameters */}}
               {{ $vars = where . "kind" "input" }}
               {{ if gt (len $vars) 0 }}
-                {{ $code_block = printf "%s// parameters\n" $code_block  }}
                 {{ range $vars }}
                   {{ with .var }}
                     {{ range  . }}
-                      {{ $code_block = printf "%s// %s[0].%s := %s;\n" $code_block $varName .name $dummy }}
+                      {{ $code_block = printf "%s// %s[0].%s := ;\n" $code_block $varName .name }}
                     {{ end }}
                   {{ end }}
                 {{ end }}
-                {{ $code_block = printf "%s\n" $code_block }}
               {{ end }}
 
               {{/* function block call */}}
-              {{ $code_block = printf "%s// call\n" $code_block }}
               {{ $code_block = printf "%s%s[0](" $code_block $varName }}
               {{ $vars = where . "kind" "in_out" }}
               {{ if gt (len $vars) 0 }}
@@ -49,11 +45,10 @@
               {{/* outputs */}}
               {{ $vars = where . "kind" "output" }}
               {{ if gt (len $vars) 0 }}
-                {{ $code_block = printf "\n%s// output\n" $code_block  }}
                 {{ range $vars }}
                   {{ with .var }}
                     {{ range  . }}
-                      {{ $code_block = printf "%s// %s := %s[0].%s;\n" $code_block $dummy $varName .name  }}
+                      {{ $code_block = printf "%s//  := %s[0].%s;\n" $code_block $varName .name  }}
                     {{ end }}
                   {{ end }}
                 {{ end }}
@@ -61,9 +56,24 @@
 
             {{ else }}
               {{/* function call */}}
-              {{/* todo: add params  */}}
-              {{ $code_block = printf "%s// call\n" $code_block }}
-              {{ $code_block = printf "%s%s := %s();" $code_block $dummy $name }}
+              {{ $code_block = printf "%s%s := %s(" $code_block $dummy $name }}
+
+              {{/* parameters */}}
+              {{ $vars = where . "kind" "input" }}
+              {{ if gt (len $vars) 0 }}
+                {{ range $vars }}
+                  {{ with .var }}
+                    {{ range  first 1 . }}
+                      {{ $code_block = printf "%s\n           %s := " $code_block .name }}                    
+                    {{ end }}
+                    {{ range  after 1 . }}
+                      {{ $code_block = printf "%s,\n           %s := " $code_block .name }}                    
+                    {{ end }}
+                  {{ end }}
+                {{ end }}
+              {{ end }}
+
+              {{ $code_block = printf "%s);" $code_block }}
             {{ end }}
 
         {{ printf "%s\n```" $code_block | markdownify }}
