--- a/layouts/partials/lib/overview/assets.html
+++ b/layouts/partials/lib/overview/assets.html
@@ -4,7 +4,7 @@
   <div class="border rounded-lg">
     {{ $index := 1 }}
 
-    {{ range $key, $value := (sort . "date" "asc") }}
+    {{ range $key, $value := (sort . "date" "desc") }}
       <div class="flex justify-between items-center px-2 py-1 {{if ne $index 1 }}border-t{{ end }}">
 
         {{ with $value.url}}
