--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -16,11 +16,17 @@
           </article>
 
           <div class="flex flex-wrap">
-            {{/* {{ range .Paginator.Pages.ByWeight }} */}}
-            {{ range .Pages.ByWeight }}            
-              {{ .Render "summary" }}
+            {{ range .Pages.GroupBy "Section" }}
+              {{ with $.Site.GetPage "section" .Key }}
+                <h2>{{.Title}}</h2>
+              {{ else }}
+                <h2>{{ .Key | title }}</h2>
+              {{ end }}
+
+              {{ range .Pages }}
+                {{ .Render "summary" }}
+              {{ end }}
             {{ end }}
-            {{/* {{ partial "pagination/pagination" . }} */}}
           </div>
 
           {{ partial "footer/page-footer.html" . }}          
