add featured image

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,6 +9,7 @@
 
           <header>
             <h1>{{ .Title }}</h1>
+            {{ partial "body/featured-image" . }}
           </header>
 
           <div class="mb-8 flex flex-col items-start sm:flex-row sm:items-center sm:flex-wrap sm:flex-grow">
