add `featuredImageCaption` / no rounded corners for small screens

--- a/layouts/partials/body/featured-image.html
+++ b/layouts/partials/body/featured-image.html
@@ -10,7 +10,11 @@
     {{ $image := .  }}
     {{ $image = $image.Fill "1600x1000" }}
     <figure>
-      <img class="rounded" src="{{ $image.Permalink }}" alt="featured image"/>
+      <img class="md:rounded" src="{{ $image.Permalink }}" alt="featured image"/>
+      {{ with $.Params.featuredImageCaption  }}
+        <figcaption>{{ . | markdownify }}</figcaption>
+      {{ end }} 
+   
     </figure>
   {{ else }}
     {{ warnf "Image resource '%q' not found for page: %v" $fileName $.Permalink }}
