--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,7 +9,10 @@
 
           <header>
             <h1>{{ .Title }}</h1>
-          </header>
+            {{ if .Params.featuredImage }}
+              {{ partial "body/featured-image" . }}
+            {{ end }}
+          </header>          
 
           <article>
             {{ .Content }}
