--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,9 @@
 
           <header>
             <h1>{{ .Title }}</h1>
-            {{ partial "body/featured-image" . }}
+            {{ if .Params.featuredImage }}
+              {{ partial "body/featured-image" . }}
+            {{ end }}
           </header>
 
           <div class="mb-8 flex flex-col items-start sm:flex-row sm:items-center sm:flex-wrap sm:flex-grow">
