--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -19,12 +19,9 @@
           </article>
 
           <div class="flex flex-wrap">
-            {{/* {{ $paginator := .Paginate (where .Pages "Type" .Type).ByWeight }} */}}
-            {{/* {{ range $paginator.Pages }}             */}}
-            {{ range (where .Pages "Type" .Type).ByWeight }}            
+            {{ range .Pages }}            
               {{ .Render "summary" }}
             {{ end }}
-            {{/* {{ partial "pagination/pagination" . }} */}}
           </div>
 
           {{ partial "footer/page-footer.html" . }}          
